--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Hanul Jeon
-# email: hanuljeon95 at gmail dot com
+email: hanuljeon95@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 #   
 baseurl: "" # the subpath of your site, e.g. /blog
