--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: hanuljeon95
 # github_username: 
 
 # Build settings
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
