--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ mathjax: true
 
 navigation:
   - {file: "index.md", icon: home}
-  - {file: "research.md", icon: file-text}
+  - {file: "papers.md", icon: file-text}
   - {file: "posts.md", icon: pencil}
 
 external:                    # see http://fontawesome.com/icons
@@ -33,7 +33,7 @@ external:                    # see http://fontawesome.com/icons
 #  - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
-#  disqus_shortname: ""      # see https://disqus.com/
+#  disqus_shortname: "hanuljeon"      # see https://disqus.com/
 #  isso_domain: ""           # see https://posativ.org/isso/
 
 plugins:
