Page name changed. Add comments.

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ external:                    # see http://fontawesome.com/icons
 #  - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
-#  disqus_shortname: "hanuljeon"      # see https://disqus.com/
+#  disqus_shortname: "hanuljeon95"      # see https://disqus.com/
 #  isso_domain: ""           # see https://posativ.org/isso/
 
 plugins:
