Page name changed. Add comments.

--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,9 @@ external:                    # see http://fontawesome.com/icons
 #  - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
-#  disqus_shortname: "hanuljeon95"      # see https://disqus.com/
+disqus_shortname: "hanuljeon95"      # see https://disqus.com/
 #  isso_domain: ""           # see https://posativ.org/isso/
+
 
 plugins:
  - jekyll-feed
