Page name changed. Add comments.

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ external:                    # see http://fontawesome.com/icons
 
 comments:
 disqus_shortname: "hanuljeon95"      # see https://disqus.com/
+disqus_domain: "hanuljeon95.github.io"
 #  isso_domain: ""           # see https://posativ.org/isso/
 
 
